infra/terraform/vm/security-groups.tf
resource "aws_security_group" "ec2_workstation" {
  name        = "ec2-workstation-sg"
  description = "Security group for the workstation EC2"
  vpc_id      = aws_vpc.workstation_vpc.id

  ingress {
    description = "Jenkins"
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "SSH from allowed CIDR"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = [var.ssh_allowed_cidr]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "ec2-workstation-sg"
  }
}

resource "aws_security_group" "ec2_homolog" {
  name        = "ec2-homolog-sg"
  description = "Security group for the homolog EC2"
  vpc_id      = aws_vpc.workstation_vpc.id

  ingress {
    description = "SSH from allowed CIDR"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = [var.ssh_allowed_cidr]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "ec2-homolog-sg"
  }
}

resource "aws_security_group" "ec2_prod" {
  name        = "ec2-prod-sg"
  description = "Security group for the prod EC2"
  vpc_id      = aws_vpc.workstation_vpc.id

  ingress {
    description = "SSH from allowed CIDR"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = [var.ssh_allowed_cidr]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "ec2-prod-sg"
  }
}
